--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-opencv-python
-google.colab
-numpy
++email-validator==1.3.0
++Flask==2.0.3
++Flask-Login==0.5.0
++Flask-Migrate==4.0.0
++Flask-Reuploaded==1.2.0
++Flask-SQLAlchemy==2.5.1
++Flask-WTF==1.0.1
++SQLAlchemy==1.4.45
++WTForms==3.0.0
++Flask-Reuploaded==1.2.0
++pillow==9.3.0
++tesserocr==2.5.2
++chardet==5.1.0
